# pl0-compiler

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yaml  requirements.txt
.github/workflows/: pl0-compiler.yaml
cmake/: clang-format.cmake  cmake-format.cmake
pl0-compiler/: CMakeLists.txt  main.cc
pl0-compiler/analyzer/: CMakeLists.txt
pl0-compiler/analyzer/analyzer/: analyzer.cc  analyzer.hh
pl0-compiler/analyzer/test/: analyzer_test.cc
pl0-compiler/codegen/: CMakeLists.txt  main.cc
pl0-compiler/codegen/codegen/: codegen.cc  codegen.hh  label_manager.cc  label_manager.hh  scratch_register_manager.cc  scratch_register_manager.hh
pl0-compiler/codegen/test/: codegen_test.cc
pl0-compiler/examples/: exponentiation.pl0  sum.pl0
pl0-compiler/lexer/: CMakeLists.txt
pl0-compiler/lexer/lexer/: lexer.cc  lexer.hh
pl0-compiler/lexer/lexer/token/: id_token.cc  id_token.hh  integer_token.cc  integer_token.hh  token.cc  token.hh  token_type.hh
pl0-compiler/lexer/test/: lexer_test.cc
pl0-compiler/parser/: CMakeLists.txt
pl0-compiler/parser/parser/: parser.cc  parser.hh
pl0-compiler/parser/parser/ast/: assign_stmt_node.cc  assign_stmt_node.hh  block_node.cc  block_node.hh  call_stmt_node.cc  call_stmt_node.hh  comparison_test_node.cc  comparison_test_node.hh  const_decl_node.cc  const_decl_node.hh  decl_node.hh  division_expr_node.cc  division_expr_node.hh  equal_test_node.cc  equal_test_node.hh  expr_node.hh  id_expr_node.cc  id_expr_node.hh  if_stmt_node.cc  if_stmt_node.hh  input_expr_node.cc  input_expr_node.hh  int_expr_node.cc  int_expr_node.hh  minus_expr_node.cc  minus_expr_node.hh  multiplication_expr_node.cc  multiplication_expr_node.hh  negative_expr_node.cc  negative_expr_node.hh  not_equal_test_node.cc  not_equal_test_node.hh  odd_test_node.cc  odd_test_node.hh  out_stmt_node.cc  out_stmt_node.hh  plus_expr_node.cc  plus_expr_node.hh  proc_decl_node.cc  proc_decl_node.hh  (+8 more)
pl0-compiler/parser/test/: parser_test.cc
test/: CMakeLists.txt  gtest_example.cc
